--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,9 @@ jobs:
 
     - name: Install migrate
       run: |
-      curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
-      sudo mv migrate.linux-amd64 /usr/local/bin/ migrate
-      which migrate
+        curl -L https://github.com/golang-migrate/migrate/releases/download/${version}/migrate.${os}-${arch}.tar.gz | tar xvz
+        sudo mv migrate ${os}-${arch} /usr/local/bin/migrate
+        which migrate
 
     - name: Migrate up
       run : make migrateup
