--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
       postgres:
         # Docker Hub image
         image: postgres
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: secret
