--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,15 @@ jobs:
       postgres:
         # Docker Hub image
         image: postgres
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: secret
           POSTGRES_USER: root
-          POSTGRES_DB: simple_bank
+          POSTGRES_DB: bank
+        
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
