--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
           --health-retries 5
 
     steps:
+    - uses: export
     - uses: actions/checkout@v4
 
     - name: Set up Go
@@ -56,3 +57,5 @@ jobs:
 
     - name: Test
       run: make test
+
+    - uses: export
